# agenticRAG

./: .env.example  .gitignore  INSTALL_REPORT.md  README.md  constraints.txt  environment-eval.yml  environment.yml  pyproject.toml  requirements.txt  run_server.py
app/: __init__.py  agents.py  chunk_identity.py  clients.py  config.py  documents.py  eval_trace.py  ingestion.py  local_trace.py  main.py  observability.py  query_jobs.py  registry.py  retrieval.py  schemas.py  service.py
evaluation/: README.md  __init__.py  apply_reviews.py  build_dataset.py  build_report.py  common.py  corpus.py  export_results.py  metrics.py  production_health.py  ragas_score.py  run.py  systems.py  validate_dataset.py
evaluation/datasets/: chinatravel_rag_v1.jsonl  generation_meta_v1.json  review_sheet_v1.csv
evaluation/manifests/: kb_v1.json
evaluation/runs/20260718-all120/: comparison.md  comparison_agentic_rounds.csv  comparison_by_category.csv  comparison_by_question_type.csv  comparison_overall.csv  config.json  ragas_scores.jsonl  scores.jsonl  summary.csv  summary.json
evaluation/runs/20260718-all120/agentic_rag/: eval_results.jsonl  testset_real.jsonl
evaluation/runs/20260718-all120/traditional_rag/: eval_results.jsonl
evaluation/runs/production-health/: production_health.json  production_health_issues.csv
examples/: chinatravel_client.py
frontend/: app.css  app.js  index.html
scripts/: configure_env.py
tests/: test_documents.py  test_evaluation.py  test_ingestion.py  test_pricing.py  test_query_jobs.py  test_retrieval.py  test_service.py
