[project]
name = "chinatravel-agentic-rag"
version = "0.1.0"
description = "Isolated Agentic RAG and document ingestion service for ChinaTravel"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "qdrant-client==1.18.0",
    "PyYAML==6.0.3",
    "python-dotenv==1.2.2",
    "openai==2.45.0",
    "json-repair==0.61.5",
    "python-multipart==0.0.32",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "ragaai-catalyst==2.1.7.4",
    "litellm==1.61.15",
    "langchain==0.2.17",
    "langchain-core==0.2.43",
    "langsmith==0.1.147",
    "numpy==1.26.4",
    "packaging==24.2",
    "pytz==2026.2",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
